This closes csoulakian/Twitter-Messaging-Engine-Java#6 verifyURL bug